--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button id="modal" type="button" class="btn btn-primary read-more" data-toggle="modal" data-target="#myModal">
                         read more
                     </button>
-                    <!-- Modal -->
+                    <!-- Modal okno-->
                     <div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
