--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Montserrat:wght@100;300;600&family=Playfair+Display:ital@1&family=Raleway:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Montserrat:wght@100;300;600&family=Open+Sans:wght@300&family=Playfair+Display:ital@1&family=Raleway:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./style/scss.css">
-        <script src="./js/modal.js"></script>
     </head>
     <body>
         <header class="header">
@@ -160,6 +159,12 @@
                 </div>
             </div>
         </footer>
+         <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous">
+        </script>
+        <script src="./js/modal.js"></script>
     </body>
 </html>
 
