--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Montserrat:wght@100;300&family=Playfair+Display:ital@1&family=Raleway:wght@200&display=swap" rel="stylesheet">
@@ -9,7 +10,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Montserrat:wght@100;300;600&family=Playfair+Display:ital@1&family=Raleway:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Montserrat:wght@100;300;600&family=Open+Sans:wght@300&family=Playfair+Display:ital@1&family=Raleway:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./style/scss.css">
-        <script src="./js/modal.js"></script>
     </head>
     <body>
         <header class="header">
@@ -35,24 +35,25 @@
                     <h1>ambition<span class="red-point">.</span></h1>
                     <h2>We're small but impressive creative agency.</h2>
                     <button id="modal" type="button" class="btn btn-primary read-more" data-toggle="modal" data-target="#myModal">
-                        read more
+                        contact me
                     </button>
-                    <!-- Modal okno-->
                     <div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                                    <h5 class="modal-title" id="staticBackdropLabel">contact me</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
+                                <form>
+                                    <input class="name" type="text" placeholder="Name">
+                                    <input class="name" type="text" placeholder="Surname">
+                                    <input class="name" type="text" placeholder="Phone number">
+                                    <input class="name" type="text" placeholder="Email">
+                                </form>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Understood</button>
+                                    <button type="button" class="btn btn-primary">To order</button>
                                 </div>
                             </div>
                         </div>
@@ -160,6 +161,11 @@
                 </div>
             </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <!--<script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="crossorigin="anonymous"></script>-->
+    <script src="./js/modal.js"></script>
     </body>
 </html>
 
