--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <img src="./img/google+.png" alt="google+">
                         </a>
                     </div>
-                    <h2>Freelancer-Designed by Pavel Debchuk</h2>
+                    <p class="name-title">Freelancer-Designed by Pavel Debchuk</p>
                 </div>
             </div>
         </footer>
